--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Mouse Mousekewitz
-description: This is Mouse Mousekewitz' homepage.
+title: E l l U
+description: This is Ellu's homepage.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
